v0.0.1.116-- (in progress)
- Greatly improved channel zapping
- Add timer fixed: new PVR API
- GUI update triggers added: new PVR API
v0.0.1.115 (10-05-2011)
- First implementation of channelgroups
v0.0.1.114 (26-02-2011)
- Delete recording is now actually working...
v0.0.1.113 (26-02-2011)
- Upcoming recordings now showing as timers in EPG and timerlist
- Delete timer implemented
- Add timer implemented
v0.0.1.112 (23-02-2011)
- Fixed bad bug that caused loss of epg data every 10 minutes
v0.0.1.111 (01-02-2011)
- EPG loading optimised. Programme descriptions only loaded for ForTheRecord 1.5.1.
- EPG loads 48 hours of data now.
- Tune live stream now also supports radio.
v0.0.1.110 (22-01-2011)
- Delete recording implemented, needs ForTheRecord 1.5.1.0 Beta 6 or newer
- Programme descriptions added to EPG and TV channels screen
- More fixes to memory handling
v0.0.1.109 (13-01-2011)
- Initial support for retrieval of recordings on the ForTheRecord Argus server
- Overview of recordings, grouped by Title
- Viewing of a selected recording via the ForTheRecord shares
- Fixes some memory corruptions 
- Support for retrieval of recordings on the ForTheRecord Argus server
- Overview of recordings, grouped by Title, including recording starttime, and description
- Credits: Red-F
v0.0.1.108 (08-01-2011)
- EPG data retrieval fixed for dates where month and day have less than 2 digits (credits: Red-F)
v0.0.1.107 (27-11-2010)
- First release of the ForTheRecord PVR client (Windows only, TSReader)
- Implemented: Channel retrieval, tuning of live TV and live radio (tsbuffer only, no rtsp), basic EPG
- Tested ForTheRecord Argus version: v1.5.0.3