@@ -1,5 +1,7 @@
 v0.0.1.116-- (in progress)
 - Greatly improved channel zapping
+- Add timer will now force a recording when no matching show title 
+  is found in the channel epg data on the server
 - Add timer fixed: new PVR API
 - GUI update triggers added: new PVR API
 v0.0.1.115 (10-05-2011)
